validator_derive_tests/tests/compile-fail/custom/missing_function_arg.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(custom(use_context))]
    s: String,
}

fn main() {}
