validator_derive_tests/tests/compile-fail/custom/missing_function_arg.stderr
error: Missing field `function`
 --> tests/compile-fail/custom/missing_function_arg.rs:5:16
  |
5 |     #[validate(custom(use_context))]
  |                ^^^^^^
